<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thonnycleuton.gastosemviagem.NovaViagem"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destino"
        android:id="@+id/labelDestino" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDestino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tipo_viagem"
        android:id="@+id/labelTipoViagem" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <RadioButton android:id="@+id/radio_tipo_lazer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_lazer"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton android:id="@+id/radio_tipo_negocios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_trabalho"
            android:layout_marginStart="20dp"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_data_viagem"
        android:id="@+id/labelDataViagem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:id="@+id/txtDataViagem"
        android:onClick="showDatePickerDialog"
        android:padding="10dp"
        android:background="#adb5b7"
        android:textColor="#fff"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_salvar"
        android:id="@+id/btnSaveNewTrip"
        android:onClick="salvarViagem"/>

</LinearLayout>
