<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thonnycleuton.gastosemviagem.MainActivity">

    <TextView
        android:id="@+id/viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:clickable="true"
        android:gravity="center"
        android:drawableTop="@drawable/car"
        android:onClick="novaViagemView"
        android:text="@string/nova_viagem"/>
    <TextView
        android:id="@+id/gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/viagem"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:gravity="center"
        android:drawableTop="@drawable/gastos"
        android:onClick="novoGastoView"
        android:text="@string/gastos"
        />
    <TextView
        android:id="@+id/banco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/viagem"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:gravity="center"
        android:drawableTop="@drawable/tap"
        android:onClick="minhasViagens"
        android:text="@string/minhas_viagens" />
</RelativeLayout>
